# marine_mp

./: .gitignore  pyproject.toml
data/: download.py  process.py
data/processed/predictions/: ins.py
data/raw/: Marine Microplastics WGS84.csv  ins.py
src/notebooks/: EDA.py  EDA_raw_mp.py  create_animation.py  inference.py  lightgbm_test.py  smote_test.py
src/utils/: __init__.py
